+FeedLikes loading onScroll; +Gifts & Maps design update